deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parks-api-service
spec:
  type: NodePort
  selector:
    app: parks-api
  ports:
  - port: 8090
    targetPort: 80
